--- a/tools/Dalamud.LocExporter/Dalamud.LocExporter.csproj
+++ b/tools/Dalamud.LocExporter/Dalamud.LocExporter.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="CheapLoc" Version="1.1.8" />
+      <PackageReference Include="CheapLoc" />
     </ItemGroup>
 
 </Project>
