--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,21 +6,17 @@
         <PlatformTarget>x64</PlatformTarget>
         <Platforms>x64</Platforms>
         <LangVersion>13.0</LangVersion>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <CentralPackageVersionOverrideEnabled>false</CentralPackageVersionOverrideEnabled>
 
         <!-- Disable Intel CET. Causes crashes on unpatched Windows 10 systems. -->
         <!-- https://github.com/dotnet/runtime/issues/108589 -->
         <CETCompat>false</CETCompat>
     </PropertyGroup>
 
-    <!-- Dependency versions -->
-    <PropertyGroup Label="Dependency Versions">
-        <LuminaVersion>6.5.1</LuminaVersion>
-        <NewtonsoftJsonVersion>13.0.3</NewtonsoftJsonVersion>
-    </PropertyGroup>
-
     <!-- Code analysis settings for all Dalamud projects. -->
     <ItemGroup Label="Code Analysis">
-        <PackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="3.3.4" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" PrivateAssets="All" />
         <AdditionalFiles Include="$(MSBuildThisFileDirectory)tools\BannedSymbols.txt" />
     </ItemGroup>
     <!--
