--- a/Dalamud/Dalamud.csproj
+++ b/Dalamud/Dalamud.csproj
@@ -183,7 +183,7 @@
     <Target Name="GenerateStubVersionData" BeforeTargets="WriteVersionData" Condition="'$(SCMVersion)'=='' And '$(Configuration)'!='Release'">
         <!-- stub out version since it takes a while. -->
         <PropertyGroup>
-            <SCMVersion>Local build at $([System.DateTime]::Now.ToString(yyyy-MM-dd HH:mm:ss))</SCMVersion>
+            <SCMVersion>本地构建（$([System.DateTime]::Now.ToString(yyyy-MM-dd HH:mm:ss))）</SCMVersion>
             <Branch>???</Branch>
             <CommitHashClientStructs>???</CommitHashClientStructs>
         </PropertyGroup>
