--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       id-token: write
       contents: write
       attestations: write
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
       - name: Checkout Dalamud
         uses: actions/checkout@v3
